@@ -66,6 +66,7 @@
   *  - Fixed DFU and CDC class bootloaders on the series 2 USB AVRs, corrected invalid signatures, added support for the new
   *    ATMEGAxxx2 series 2 variant AVRs to the DFU bootloader
   *  - Fixed Low Level USBtoSerial demo not storing received characters (thanks to Michael from DirectAid.ca)
+  *  - Fixed MIDI Device Class driver not sending/receiving MIDI packets of the correct size (thanks to Thomas Bleeker)
   *
   *
   *  \section Sec_ChangeLog090810 Version 090810
